# libiotdata

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  NOTES.md  README.md  iotdata.c  iotdata.h  iotdata_fields.c  iotdata_fields.h  test_common.h  test_complete.c  test_custom.c  test_default.c  test_example.c  test_failures.c  test_version.c
examples/: .gitignore  Makefile  README.md
examples/common/: iotdata_variant_simulator.c  iotdata_variant_simulator.h  iotdata_variant_suite.h
examples/e22xxxtxx/: e22xxxtxx.h
examples/gateway_linux/: 90-e22900t22u.rules  Makefile  config_linux.h  iotdata_gateway.c  iotdata_gateway.cfg  iotdata_gateway.service  main.c  mqtt_linux.h  serial_linux.h
examples/gateway_mqtt_lora_linux/: Makefile  config_linux.h  iotdata_gateway.c  iotdata_gateway.cfg  iotdata_gateway.service  iotdata_gateway_ddup.h  iotdata_gateway_dedup.h  iotdata_gateway_exec.h  iotdata_gateway_mesh.h  iotdata_gateway_process.h  iotdata_gateway_stat.h  iotdata_gateway_stats.h  iotdata_gateway_test.c  mqtt_linux.h  serial_linux.h
examples/iotdata/: iotdata_mesh.h  iotdata_variant_suite.h
examples/simulator/: Makefile  iotdata_variant_simulator.c  iotdata_variant_simulator.h
examples/simulator_sensor_lora_esp32/: CMakeLists.txt  Makefile  sdkconfig.defaults
examples/simulator_sensor_lora_esp32/main/: CMakeLists.txt  app.c
notes/: NOTES.md  TODO.md  TODO_A.md  TODO_B.md  TODO_C.md
tests/: README.md  test_common.h  test_complete.c  test_custom.c  test_default.c  test_example.c  test_failures.c  test_version.c
